syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.gold.proto";

message JoinRequestDto {
  string userId=1;
  string password=2;
  string address=3;
  string birth=4;
}

message JoinResponseDto{
  string userId = 1;
}

message LoginRequestDto {
  string userId = 1;
  string password = 2;
}

message LoginResponseDto {
  string userId=1;
  string accessToken = 2;
  string refreshToken = 3;
}

message ErrorCode {
  string code=1;
  string message = 2;
}

service AuthService {
  rpc registerUser(JoinRequestDto) returns (JoinResponseDto);
  rpc loginUser(LoginRequestDto) returns (LoginResponseDto);
}