syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.gold.proto";

message LoginRequestDto {
  string userId = 1;
  string password = 2;
}

message LoginResponseDto {
  string userId=1;
  string password=2;
  string address =3;
  string accessToken = 4;
  string refreshToken = 5;
}

message RefreshTokenRequestDto {
  string refreshToken=1;
  string userId=2;
}

message JwtTokenReIssueResponseDto {
  string userId=1;
  string refreshToken=2;
  string accessToken=3;
}

service JwtService {
  rpc loginUser(LoginRequestDto) returns (LoginResponseDto);
  rpc reIssueToken(RefreshTokenRequestDto) returns (JwtTokenReIssueResponseDto);

}